--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,16 +1,14 @@
-
 name: Build and Deploy to cloudhub
-
 on:
   push:
     branches: [develop]
+  workflow_dispatch:
     
 jobs:
   build: 
     runs-on: ubuntu-latest
     
     steps:
-    
     - uses: actions/checkout@v2
     
     - uses: actions/cache@v1
@@ -37,13 +35,12 @@ jobs:
         commitHash=$(git rev-parse --short "$GITHUB_SHA")
         artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
         mv $artifactName1 $artifactName2
-    
     - name: Upload artifact 
       uses: actions/upload-artifact@master
       with:
           name: artifacts
           path: target/*.jar
-          
+    
   deploy:
       needs: build
       runs-on: ubuntu-latest
@@ -59,7 +56,7 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: artifacts
-    
+
       - name: Deploy to Sandbox
         env:
           USERNAME: ${{ secrets.USERNAME }}
