--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 						<muleVersion>4.4.0</muleVersion>
 						<username>mycreditunion</username>
 						<password>Deloitte@123</password>
-						<applicationName>processapi</applicationName>
+						<applicationName>processapi1234</applicationName>
 						<environment>Sandbox</environment>
 						<workerType>MICRO</workerType>
 						<region>us-east-2</region>
