--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
       run: mvn help:effective-settings
     
     - name: Build with Maven
-      run: mvn -B -X package --file pom.xml
+      run: mvn -B package --file pom.xml
       
     - name: Stamp artifact file name with commit hash
       run: |
