--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
 				<repository>
 					<id>mulesoft-releases</id>
 					<name>MuleSoft Releases Repository</name>
-					<url>http://repository.mulesoft.org/releases/</url>
+					<url>https://repository.mulesoft.org/releases/</url>
 					<layout>default</layout>
 					<releases>
 						<enabled>true</enabled>
