--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,18 @@
 	</dependencies>
 
 	<repositories>
-<repository>
-			<id>anypoint-exchange-v3</id>
-			<name>Anypoint Exchange</name>
-			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
-			<layout>default</layout>
-		</repository>
+				<repository>
+					<id>anypoint-exchange</id>
+					<name>Corporate Anypoint Exchange</name>
+					<url>https://maven.anypoint.mulesoft.com/api/v1/organizations/096484fd-dcfd-4f60-9f58-aecc0e2e110f/maven/</url>
+					<layout>default</layout>
+					<releases>
+						<enabled>true</enabled>
+					</releases>
+					<snapshots>
+						<enabled>true</enabled>
+					</snapshots>
+				</repository>
 		<repository>
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
