--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,22 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+				<cloudHubDeployment>
+					<uri>https://anypoint.mulesoft.com</uri>
+					<muleVersion>4.4.0</muleVersion>
+					<username>mycreditunion</username>
+					<password>Deloitte@123</password>
+					<applicationName>mule-app-processapi-github</applicationName>
+					<environment>Sandbox</environment>
+					<workerType>MICRO</workerType>
+					<region>us-east-2</region>
+					<workers>1</workers>
+					<properties>
+						<maven.compiler.target>1.8</maven.compiler.target>
+						<maven.compiler.source>1.8</maven.compiler.source>
+					</properties>
+					<objectStoreV2>true</objectStoreV2>
+				</cloudHubDeployment>
 					<sharedLibraries>
 						<sharedLibrary>
 							<groupId>net.snowflake</groupId>
